Fix errors and empty JS checks Add additional error checking of missing H1 Element

--- a/popup.html
+++ b/popup.html
@@ -62,6 +62,7 @@
     <div id="recommendations" data-message="mainRecommendations">Recommendations</div>
     <div id="recommendations-panel"></div>
     <div id="recommendations-panel-2"></div>
+    <div id="recommendations-panel-3"></div>
 </div>
 <hr/>
 <div class="row">
