Add Similar Web func

--- a/popup.html
+++ b/popup.html
@@ -40,11 +40,11 @@
             </div>
             <div class="image-text">W3 Validator</div>
         </a></div>
-    </fieldset>
-
-    <fieldset id="netpeak-cloud-panel">
-        <legend data-message="netpeakCloud">Netpeak Cloud</legend>
-        <div id="netpeak-cloud">waiting...</div>
+        <div class="text-icon"><a class="with-icon" id="similar-web">
+            <div class="image-button"><img src="images/similar-web.png" alt="Similar Web" title="Similar Web"/>
+            </div>
+            <div class="image-text">Similar Web</div>
+        </a></div>
     </fieldset>
 </div>
 
@@ -56,6 +56,7 @@
     <button id="hreflang" data-message="hreflang">Hreflang</button>
     <button id="all-html" data-message="externalLinks">External Links</button>
     <a class="link-button" id="structured-data" data-message="structuredData">Structured Data</a>
+    <a class="link-button" id="headers-data" data-message="headersData">Structured Data</a>
 </div>
 <hr/>
 <div class="row">
@@ -70,6 +71,10 @@
     <div id="ad-section-heading" data-message="information">Information</div>
     <div id="headers-panel" data-message="httpHeadersPanel">HTTP headers panel</div>
     <div id="ad-section">
+        <fieldset id="netpeak-cloud-panel">
+            <legend data-message="netpeakCloud">Netpeak Cloud</legend>
+            <div id="netpeak-cloud">waiting...</div>
+        </fieldset>
         <fieldset class="full-width-and-height">
             <legend data-message="about">About</legend>
             <p data-message="aboutText">
