Remove Netpeak Cloud panel

--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>NetpeakSEO checker</title>
+    <title>Netpeak Agency SEO Tool</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <script type="text/javascript" src="background.js"></script>
     <script type="text/javascript" src="popup.js"></script>
@@ -73,10 +73,6 @@
     <div id="ad-section-heading" data-message="information">Information</div>
     <div id="headers-panel" data-message="httpHeadersPanel">HTTP headers panel</div>
     <div id="ad-section">
-        <fieldset id="netpeak-cloud-panel">
-            <legend data-message="netpeakCloud">Netpeak Cloud</legend>
-            <div id="netpeak-cloud">waiting...</div>
-        </fieldset>
         <fieldset class="full-width-and-height">
             <legend data-message="about">About</legend>
             <p data-message="aboutText">
