Fix event listners to null values

--- a/popup.html
+++ b/popup.html
@@ -82,6 +82,10 @@
                 За пълен SEO одит - свържете се с Netpeak.
             </p>
         </fieldset>
+        <fieldset id="netpeak-cloud-panel">
+            <legend data-message="netpeakCloud">Netpeak Cloud</legend>
+            <div id="netpeak-cloud">waiting...</div>
+        </fieldset>
 
     </div>
 </div>
