Implement Web Archive, remove w3 validator

--- a/popup.html
+++ b/popup.html
@@ -37,10 +37,10 @@
                                            title="Mobile Friendly test"/></div>
             <div class="image-text">Mob. Friendly</div>
         </a></div>
-        <div class="text-icon"><a class="with-icon" id="w3-validator">
-            <div class="image-button"><img src="images/w3-validator.png" alt="Mobile Friendly" title="W3 Validator"/>
+        <div class="text-icon"><a class="with-icon" id="web-archive">
+            <div class="image-button"><img src="images/web-archive.png" alt="Web Archive" title="Web Archive"/>
             </div>
-            <div class="image-text">W3 Validator</div>
+            <div class="image-text">Web Archive</div>
         </a></div>
         <div class="text-icon"><a class="with-icon" id="similar-web">
             <div class="image-button"><img src="images/similar-web.png" alt="Similar Web" title="Similar Web"/>
@@ -86,7 +86,6 @@
             <legend data-message="netpeakCloud">Netpeak Cloud</legend>
             <div id="netpeak-cloud">waiting...</div>
         </fieldset>
-
     </div>
 </div>
 </body>
